<resources>
    <string name="app_name">LiteratureQuizShay</string>
    <string name="question_text">You are smart. T/F? </string>
    <string name="true_button">TRUE </string>
    <string name="false_button">FALSE </string>
    <string name="resultsButton">RESULTS </string>
    <string name="again_button">AGAIN? </string>
    <string name="exit_button">EXIT GAME </string>
    <string name="next_button">NEXT </string>
    <string name="incorrect_toast">YOU\'RE WRONG </string>
    <string name="correct_toast">YOU\'RE RIGHT </string>
    <string name="leaving_toast"> BYE BYE </string>

    <string name="results_title"> RESULTS </string>
    <string name="quiz_title"> TAKING THE QUIZ </string>
    <string name="cheat_title"> CHEATING IS BAD </string>

    <string name="consequenceBad"> PLEASE DON\'T EVEN CONSIDER CHEATING SIR PLEASE GO AWAY </string>
    <string name="consequenceGood"> Try again? </string>
    <string name="finalScore"> YOUR SCORE:  </string>
    <string name="highScore"> HIGH SCORE:  </string>

    <string name="question1">\'Catcher in the Rye\' (by J.D. Salinger) was published in 1947. </string>
    <string name="question2">The fictional island that is constantly at war with Blefuscu over the correct way to eat a boiled egg is Lilliput. </string>
    <string name="question3">The Hunchback of Notre Dame\'s title character is named Quasimoto. </string>
    <string name="question4">Arthur Conan Doyle created Sherlock Holmes.</string>
    <string name="question5">Rapunzel is a Grimm fairy tale character named for the fruit her mother craved during pregnancy. </string>
    <string name="question6">The Nobel Prize for Literature is presented in the Scandinavian city of Copenhagen, Denmark. </string>
    <string name="question7">C.S. Lewis wrote about Narnia. </string>
    <string name="question8">A fictional book with between 20,000 and 50,000 words is called a short story. </string>
    <string name="question9">\'The Great Gatsby\' (by F. Scott Fitzgerald) was written in 1925. </string>
    <string name="question10">Popular author Roald Dahl wrote \'James and the Giant Peach\'.</string>

    <string name="cheatPermission">Cheating is wrong... are you sure you want to go down that path?</string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="cheatButton">Cheat??</string>
    <string name="backButton">Just kidding</string>
    <string name="returnButton">You cheater. </string>

    <string name="score">YOUR SCORE: </string>

    <color name="background">#4b7d81</color>
    <color name="text">#ffffff</color>
    <color name="button">#e12278</color>
    <color name="disabled">#c1a4b7</color>
</resources>
