<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    android:weightSum="1">

    <ImageView
        android:layout_width="214dp"
        android:layout_height="140dp"
        android:src="@drawable/cheating"
        android:layout_weight="0.30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheatPermission"
        android:padding="20dp"
        android:textSize="25dp"
        android:textColor="@color/text"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <Button
            android:id="@+id/show_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer_button"
            android:textColor="@color/text"
            android:background="@color/button"
            android:padding="20dp"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButton"
            android:textColor="@color/text"
            android:background="@color/button"
            android:padding="20dp"
            android:layout_margin="5dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="20dp"
        android:textColor="@color/text"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        />

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnButton"
        android:textColor="@color/text"
        android:background="@color/button"
        android:padding="20dp"
        android:layout_margin="5dp"
        />

</LinearLayout>
