<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25dp"
        android:textColor="@color/text"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/TRUE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:textColor="@color/text"
            android:background="@color/button"
            android:padding="20dp"
            android:layout_margin="5dp"

            />

        <Button
            android:id="@+id/FALSE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:textColor="@color/text"
            android:background="@color/button"
            android:padding="20dp"
            android:layout_margin="5dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheatButton"
        android:textColor="@color/text"
        android:background="@color/button"
        android:padding="20dp"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsButton"
        android:textColor="@color/text"
        android:background="@color/button"
        android:padding="20dp"
        android:layout_margin="5dp"
        android:clickable="false"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25dp"
        android:textColor="@color/text"
        android:fontFamily="sans-serif-thin"
        />

</LinearLayout>

