<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@color/background">

    <TextView
    android:id="@+id/high_score"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:textSize="25dp"
    android:textColor="@color/text"
    android:fontFamily="sans-serif-thin"
    android:text=""
    android:gravity="center"
    />
    <TextView
        android:id="@+id/results_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="40dp"
        android:textColor="@color/text"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"

        android:text=""
        android:gravity="center"
        />

    <TextView
        android:id="@+id/results_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25dp"
        android:textColor="@color/text"
        android:fontFamily="sans-serif-thin"
        android:text="@string/consequenceGood"
        android:gravity="center"
        />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <Button
        android:id="@+id/AGAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/again_button"
        android:textColor="@color/text"
        android:background="@color/button"
        android:padding="20dp"
        android:layout_margin="5dp"

        />

    <Button
        android:id="@+id/EXIT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_button"
        android:textColor="@color/text"
        android:background="@color/button"
        android:padding="20dp"
        android:layout_margin="5dp"
        />
</LinearLayout>

</LinearLayout>

